=== x.x.x / 2012-11-08

* Requests and Responses now call +.parse+ to read in raw data and convert to
  that object type.
* Message now uses #rtsp_version instead of #version.
* Message now uses .method_types instead of .message_types.
* Request and Response headers are now put in a Hash instead of converted to
  methods.

=== 0.4.0 / 2012-03-08

* gh-11: Transport header parser bolstering:
  * values that should be caps, will parse OK as lowercase now.
    * :broadcast_type now parses 'multicast'.
    * :destination now returns the value of the destination instead of
      "destination=x.x.x.x"
    * :source now returns the value of the source instead of "source=x.x.x.x"
    * Added parsing for fields:
        * ttl
        * port
        * ssrc
        * channel
        * address
        * mode
* gh-10: Session header now detects timeout value.  This means that where use
  of the value extracted from this header used to be a simple Integer, now you
  have a session Hash with :session_id and :timeout keys.

=== 0.3.0 / 2012-03-02

* Extracted RTP-esque functionality to an +rtp+ gem, on which this gem is now
  dependent on version 0.0.1 of that.
* Laxed dependency requirement on parslet.
* Bumped dependency requirement on sdp to ~> 0.2.6, due to parslet conflicts

=== 0.2.2 / 2011-11-02

* Added a queue for listening and building the RTP file from the received data.
* Fixed bugs:
  * gh-6: .gemspec was missing +parslet+ dependency. Thanks [tindron[http://github.com/tindron]].
  
=== 0.2.1 / 2011-09-20

* `gem test rtsp` is failing; added rtsp.gemspec to list of files in the spec.

=== 0.2.0 / 2011-09-19

* Changed RTSP::Capturer init_*_server methods to take params in order to reduce
  dependency on state of the Capturer object.
* Improvements:
  * If RTSP::Capturer can't open port 9000, it increments by 1 and tries again,
    50 times, then raises.
  * gh-4: Remove dependency on ore en lieu of standard gem commands.
  * Participate in http://test.rubygems.org!